# ybs_second_task

./: .editorconfig  .gitignore  README.md  docker-compose.local.yaml  docker-compose.override.yaml  docker-compose.yaml
gift_app/: .dockerignore  Dockerfile  Pipfile  config.yaml  example.env  local.env  manage.py  setup.cfg
gift_app/gift_app/: config.py  decorators.py  errors.py  fields.py  main.py  middleware.py  models.py  providers.py  schemas.py  storage.py  utils.py  views.py
gift_app/gift_app/tests/: conftest.py  test_api.py  test_api_birthdays.py  test_api_imports.py  test_api_imports_list.py  test_api_percentile.py  test_api_update.py  test_storage.py
nginx/: Dockerfile  nginx.conf  wait-for.sh
