[metadata]
name = gift_app
version = attr: gift_app.VERSION

[options]
zip_safe = False
packages = find:

[tool:pytest]
# This will ignore all warnings of type DeprecationWarning where the start
# of the message matches the regular expression
filterwarnings =
    ignore:.*with \(yield from lock\):DeprecationWarning
