[metadata]
name = gift_app
version = attr: gift_app.VERSION

[options]
zip_safe = False
packages = find:

[tool:pytest]
# This will ignore all warnings of type DeprecationWarning where the start
# of the message matches the regular expression
filterwarnings =
    ignore:.*with \(yield from lock\):DeprecationWarning
    ignore:the imp module:DeprecationWarning

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
